--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "bootstrap": "~3.1.1"
+    "jquery": "1.10.2",
+    "bootstrap": "~3.1.1",
+    "angular-route": "~1.2.x"
   }
 }
